prevent media selection pane from growing too large

--- a/src/app/components/shell-ui/overlay-pane.css
+++ b/src/app/components/shell-ui/overlay-pane.css
@@ -2,7 +2,7 @@
     /*position: absolute;
     right: 0px;
     top: 40px;*/
-    max-width: 50%;
+    max-width: 33%;
     min-width: 33%;
     height: 100%;
     background: #ebebeb;
